[package]
name = "certificate_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
clap = { version = "4.4.3", features = ["derive"] }
rustls = "0.22.2"
tokio = { version = "1", features = ["full"] }
webpki-roots = "0.26"
x509-parser = "0.15.1"

[[bin]]
name = "certinfo"
path = "src/main.rs"